# snyk-azure-boards-integration

./: .cursorignore  .dockerignore  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  README.md  SPEC.md  pyproject.toml  release-please-config.json
.cursor/rules/: guidelines.mdc  openspec.mdc
.github/: template
.github/workflows/: release.yml  tag.yml
data/: sample-config.yaml
openspec/: AGENTS.md  config.yaml
openspec/changes/azure-boards-defaults-sync-policy/: design.md  proposal.md  tasks.md
openspec/changes/azure-devops-client/: design.md  tasks.md
openspec/changes/azure-sync-runtime-platform/: tasks.md
openspec/changes/csv-snyk-org-config-generator/: tasks.md
openspec/changes/ndjson-stdout-logging/: proposal.md  (+1 more)
scripts/: generate_org_mapping_config.py  init_mapping_store.py
src/: main.py
src/commands/: __init__.py  azure_devops_smoke.py  fetch.py  sync.py
src/config/: __init__.py  errors.py  loader.py  models.py  policy_parse.py  snyk_origins.py  template_merge.py
src/integrations/: __init__.py
src/mapping_store/: __init__.py  azure_table_store.py  errors.py  factory.py  protocol.py  schema.py  sqlite_store.py  table_keys.py
src/observability/: __init__.py  cli_logging.py  integration_audit.py  sync_context.py
src/org_config_generator/: __init__.py  core.py
src/snyk/: __init__.py  client.py  constants.py  errors.py  parser.py  urls.py
src/sync/: azure_batch.py  effective.py  enrichment.py  issue_content.py  issue_filters.py  lifecycle.py  origin_filter.py  patch_build.py  run.py  validate.py  work_item_tags.py
tests/: test_azure_devops_client.py  test_azure_devops_urls.py  test_azure_table_store_unit.py  test_client.py  test_commands_azure_devops_smoke.py  test_commands_fetch.py  test_config.py  test_init_mapping_store_script.py  test_main.py  test_mapping_store.py  test_observability_cli_logging.py  test_org_config_generator.py  test_parser.py  test_snyk_origins.py  test_sync_effective.py  test_sync_enrichment.py  test_sync_issue_content.py  test_sync_lifecycle.py  test_sync_origin_exclusion.py  test_sync_patch_build.py  test_sync_run_branch.py  test_table_keys.py  test_template_merge.py  test_urls.py  test_work_item_tags.py
(+106 files in other folders)
