[project]
name = "snyk-azure-boards-integration"
version = "0.1.0"
description = "Integrate Snyk security findings with Azure Boards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snyk", "src/commands"]

[tool.hatch.build.targets.sdist]
include = ["src/snyk", "src/commands", "src/main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
