[project]
name = "snyk-azure-boards-integration"
version = "0.1.0"
description = "Integrate Snyk security findings with Azure Boards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-data-tables>=12.7.0",
    "azure-identity>=1.25.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/snyk",
    "src/sync",
    "src/commands",
    "src/config",
    "src/mapping_store",
    "src/integrations",
    "src/observability",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/snyk",
    "src/sync",
    "src/commands",
    "src/config",
    "src/mapping_store",
    "src/integrations",
    "src/observability",
    "src/main.py",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
